[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ['derive']}
csv = "1.3.0"
serde_json = "*"
tokio = { version = "1", features = ["full"] }
axum = "*"